# regenerative-snr-solver

./: .gitignore  readme.md
python/cell_type_model_builder/: granular_classes.json  grn.csv  mechanical_classes.json  model_genes.json  run_classification.py  symbol2entrez.json  true_entrez_list.json  utilities.py
python/mophology_training/: cards  morpho_ai.py
python/quality_control/: ARI.py  Filter.py  HealthCheck.py  ModelCheck.py  SpatialCellTypes.py  back_genes.json  ensg_in_skin.json  mygene_cache  onnx_combine.py  tif_check.py  verify_observation_space_bin.py
python/rule_extraction/: CCTest.py  CellTypeClassifiers.py  CustomGenePanels.py  DataShower.py  EntrezMapping.py  GRN.py  GenePanelPadding.py  IA3Test.py  IDTrainer.py  Interactome.py  Interactome2.py  Lineage.py  LineageandHardware.py  MLP.py  MechanicalMapping.py  ONNX Verification.py  PostTrainingKNN.py  SpatialMatch.py  TheGreatMerge.py  VendorChokepoint.py  WOT.py  atlas_viewer.html  bin_check.py  cell_types.json  cellnition.py  gnn_sde.py  interactome3.py  labeled_cells_answer_key.parquet  ligrec.json  master_gene_map.json  model_genes.json  pyenv.rtf  re_export_onnx.py  readTensor.py  sde_physics_constants.json  squash.py  unified_preprocessor.py  universal_cell_classifier_backup.pt  universal_cell_classifier_stable.onnx  universal_cell_classifier_stable.onnx.data  (+1 more)
rust/: Cargo.toml
rust/apps/gui_application/: Cargo.toml  build.rs
rust/apps/gui_application/src/: main.rs
rust/apps/gui_application/ui/: app.slint
rust/apps/trainer/: Cargo.toml
rust/apps/trainer/src/: a2c.rs  main.rs  split_brain.rs  tissue_training.rs
rust/core/data_compiler/: Cargo.toml
rust/core/data_compiler/src/: data_io.rs  gt_environment.rs  lib.rs  physics_rulebook.rs  rna_dual_head_cell_type_classifier.rs  tile_grid.rs
rust/core/shared_biology/: Cargo.toml
rust/core/shared_biology/src/: lib.rs
rust/engines/generator/: Cargo.toml
rust/engines/generator/src/: core.rs  dispatch.rs  helpers.rs  io.rs  lib.rs  types.rs
rust/engines/generator/src/shaders/: aging.wgsl  bake_vessels.wgsl  bioelectricity.wgsl  extract_signatures.wgsl  grn.wgsl  ion_diffusion.wgsl  microtome.wgsl  mitosis.wgsl  morphogenesis.wgsl  node2image.wgsl  observation_space.wgsl  physics.wgsl  renderer.wgsl  spatial_hash.wgsl  topology.wgsl
rust/engines/simulator/: description.txt
rust/pre_processing/interactome/src/: main.rs
rust/pre_processing/mean_padded_tensor_assembler/src/: main.rs
(+50 files in other folders)
