[package]
name = "data_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_biology = { path = "../../core/shared_biology" }
generator = { path = "../../engines/generator" }

ndarray = "0.17.2"
safetensors = "0.7.0"
anyhow = "1.0"
polars = { version = "0.51.0", features = ["lazy", "csv", "parquet"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hdf5 = "0.8.1"
bytemuck = {version = "1.25.0", features = ["derive"]}
ort = { version = "2.0.0-rc.12", features = ["coreml"] }
glam = "0.32.1"