[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_biology = { path = "../../core/shared_biology" }

glam = { version = "0.32.1" , features = ["bytemuck"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
wgpu = "28.0.0"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }